[package]
name = "wasm-pack"
description = "📦✨ your favorite rust -> wasm workflow tool!"
version = "0.10.3"
authors = ["Ashley Williams <ashley666ashley@gmail.com>", "Jesper Håkansson <jesper@jesperh.se>"]
repository = "https://github.com/rustwasm/wasm-pack.git"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["wasm"]
documentation = "https://rustwasm.github.io/wasm-pack/"

[dependencies]
anyhow = "1.0.68"
atty = "0.2.14"
cargo_metadata = "0.15.2"
console = "0.6.2"
dialoguer = "0.10.2"
curl = "0.4.44"
env_logger = { version = "0.10.0", default-features = false }
human-panic = "1.0.3"
glob = "0.3.1"
log = "0.4.17"
openssl = { version = '0.10.45', optional = true }
parking_lot = "0.12.1"
reqwest = { version = "0.11.13", features = ["blocking"] }
semver = "1.0.16"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_ignored = "0.1.7"
serde_json = "1.0.91"
strsim = "0.10.0"
siphasher = "0.3.10"
structopt = "0.3.26"
toml = "0.5.10"
which = "4.3.0"
binary-install = "0.1.0"
walkdir = "2.3.2"
chrono = "0.4.23"

[dev-dependencies]
assert_cmd = "2.0.8"
lazy_static = "1.4.0"
predicates = "2.1.5"
serial_test = "0.10.0"
tempfile = "3.3.0"

[features]
# OpenSSL is vendored by default, can use system OpenSSL through feature flag.
default = ['openssl/vendored']

# Treat compiler warnings as a build error.
# This only runs in CI by default
strict = ['openssl/vendored']
sys-openssl = ['openssl']
# Keeping feature for users already using this feature flag
vendored-openssl = ['openssl/vendored']
