[package]
name = "scopes-hello-world"
description = "an example rust->wasm crate"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
license = "WTFPL"
repository = "https://github.com/ashleygwilliams/wasm-pack"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.4"
